--- a/package.json
+++ b/package.json
@@ -12,12 +12,12 @@
   },
   "dependencies": {
     "babel-plugin-styled-components": "^1.10.0",
-    "gatsby": "^2.1.31",
+    "gatsby": "^2.8.5",
     "gatsby-image": "^2.0.33",
     "gatsby-plugin-manifest": "^2.0.24",
     "gatsby-plugin-offline": "^2.0.25",
     "gatsby-plugin-react-helmet": "^3.0.9",
-    "gatsby-plugin-sharp": "^2.0.28",
+    "gatsby-plugin-sharp": "^2.1.3",
     "gatsby-plugin-styled-components": "^3.0.7",
     "gatsby-source-filesystem": "^2.0.24",
     "gatsby-transformer-sharp": "^2.1.17",
@@ -27,7 +27,8 @@
     "react-helmet": "^5.2.0",
     "react-spring": "^8.0.19",
     "react-with-gesture": "^4.0.8",
-    "styled-components": "^4.1.3"
+    "styled-components": "^4.1.3",
+    "use-resize-observer": "^3.1.0"
   },
   "devDependencies": {
     "babel-eslint": "^10.0.1",
